--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
+    "react-loading-skeleton": "^3.1.0",
     "react-masonry-css": "^1.0.16",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
